--- a/input.html
+++ b/input.html
@@ -1,6 +1,17 @@
-h1 {color : #ff0000; font-family:arial}
-p {font-size:18px }
+<!DOCTYPE html>
+<html>
+<style>
+body {
+  background-color:#00778B;
+}
+h1 {color: #FFC72C;text-align: center;}
+p {font-family: timesnewroman;font-size: 20px;}
 p.center {font-size:16px; text-align:center}
-.quoted {font-style: italic; font-size:14pt;text-indent:1in }
+.quoted {font-style: italic; font-size:12pt;text-indent:1in }
 A {font-family:arial; font-size:20px; color : #234567}
-a:hover {color : gray}
+a:hover {color : #BCC0CA}
+</style>
+</head>
+<body>
+
+
